Ajout tests ArgumentHandler

--- a/CodeGenerator.Tests/CodeGenerator.Tests.csproj
+++ b/CodeGenerator.Tests/CodeGenerator.Tests.csproj
@@ -20,4 +20,8 @@
         </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\CodeGenerator\CodeGenerator.csproj" />
+    </ItemGroup>
+
 </Project>
